--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
@@ -66,6 +66,7 @@
                 android:background="@drawable/mainprofile_thin_border"
                 android:hint=""
                 android:inputType="textNoSuggestions"
+                android:paddingStart="15dp"
                 android:paddingLeft="5dp"
                 android:paddingTop="15dp"
                 android:paddingBottom="15dp"
@@ -110,7 +111,8 @@
                     android:background="@drawable/mainprofile_thin_border"
                     android:gravity="center_vertical"
                     android:inputType="number"
-                    android:paddingLeft="10dp"
+                    android:paddingStart="15dp"
+                    android:paddingLeft="15dp"
                     android:tag="+91"
                     android:textColor="@color/app_light_black"
                     app:fontName="oswald.ttf" />
@@ -152,7 +154,8 @@
                 android:background="@drawable/mainprofile_thin_border"
                 android:hint=""
                 android:inputType="textNoSuggestions"
-                android:paddingLeft="5dp"
+                android:paddingStart="15dp"
+                android:paddingLeft="15dp"
                 android:paddingTop="15dp"
                 android:paddingBottom="15dp"
                 android:textColor="@color/app_light_black"
@@ -249,6 +252,8 @@
                     android:background="@drawable/mainprofile_thin_border"
                     android:hint=""
                     android:inputType="textNoSuggestions"
+                    android:paddingStart="15dp"
+                    android:paddingLeft="15dp"
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
                     android:textColor="@color/app_light_black"
