--- a/MyCity4Kids/MyCity4Kids/res/layout/recording_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/recording_layout.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/base_card"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_gravity="right|bottom"
@@ -109,9 +110,34 @@
 
     </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/imageViewSend"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_gravity="bottom|right"
+        android:layout_marginTop="6dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="6dp"
+        android:background="#FFFFFF"
+        android:clickable="true"
+        android:elevation="2dp"
+        android:translationZ="2dp"
+        android:visibility="gone"
+        app:cardCornerRadius="22dp"
+        app:cardUseCompatPadding="false"
+        app:contentPadding="0dp">
+
+        <ImageView
+            android:id="@+id/imageSend"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/send_msg_ic" />
+
+    </android.support.v7.widget.CardView>
+
     <LinearLayout
         android:id="@+id/layoutSlideCancel"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_gravity="bottom|right"
         android:layout_marginEnd="88dp"
@@ -152,20 +178,26 @@
             android:layout_height="match_parent">
 
             <LinearLayout
+                android:id="@+id/linear_one"
                 android:layout_width="70dp"
                 android:layout_height="36dp"
                 android:layout_gravity="bottom"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+                android:visibility="gone"
                 android:background="#ffffff" />
 
             <LinearLayout
+                android:id="@+id/linear_two"
                 android:layout_width="20dp"
                 android:layout_height="36dp"
                 android:layout_gravity="bottom"
                 android:layout_marginStart="90dp"
                 android:layout_marginLeft="90dp"
+                android:orientation="horizontal"
+                android:visibility="gone"
                 android:layout_marginBottom="10dp" />
 
             <ImageView
@@ -220,6 +252,49 @@
                 android:textStyle="normal"
                 android:visibility="gone" />
 
+            <TextView
+                android:id="@+id/cancelStop"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_gravity="bottom"
+                android:gravity="center_horizontal"
+                android:padding="13dp"
+                android:text="Cancel"
+                android:textSize="20sp"
+                android:textStyle="normal"
+                android:visibility="gone" />
+
+            <LinearLayout
+                android:id="@+id/layoutMessage"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_gravity="bottom"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="72dp"
+                android:gravity="center_vertical"
+                android:visibility="gone"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageViewAttachment"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:padding="8dp"
+                    android:src="@drawable/attachment_ic" />
+
+                <EditText
+                    android:id="@+id/editTextMessage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:ems="10"
+                    android:hint="Type a message"
+                    android:imeOptions="actionSend"
+                    android:inputType="textPersonName"
+                    android:paddingLeft="4dp" />
+
+            </LinearLayout>
         </FrameLayout>
     </LinearLayout>
 </FrameLayout>
