--- a/MyCity4Kids/MyCity4Kids/res/layout/recording_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/recording_layout.xml
@@ -63,13 +63,12 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/imageViewAudio"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
+        android:layout_width="41dp"
+        android:layout_height="41dp"
         android:layout_gravity="bottom|right"
         android:layout_marginTop="6dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="6dp"
-        android:background="#FFFFFF"
         android:clickable="true"
         android:elevation="2dp"
         android:translationZ="2dp"
@@ -87,13 +86,12 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/imageViewStop"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
+        android:layout_width="41dp"
+        android:layout_height="41dp"
         android:layout_gravity="bottom|right"
         android:layout_marginTop="6dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="6dp"
-        android:background="#FFFFFF"
         android:clickable="true"
         android:elevation="2dp"
         android:translationZ="2dp"
@@ -254,10 +252,9 @@
 
             <TextView
                 android:id="@+id/cancelStop"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="56dp"
-                android:layout_gravity="bottom"
-                android:gravity="center_horizontal"
+                android:layout_gravity="bottom|center_horizontal"
                 android:padding="13dp"
                 android:text="Cancel"
                 android:textSize="20sp"
