--- a/MyCity4Kids/MyCity4Kids/res/layout/audio_post_upload_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/audio_post_upload_item.xml
@@ -2,16 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="@dimen/space_10">
 
     <LinearLayout
         android:id="@+id/audioLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/audioTimeElapsed"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/removeItemImageView"
         android:orientation="horizontal">
 
@@ -62,10 +62,10 @@
         android:layout_height="20dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="76dp"
         android:layout_marginLeft="76dp"
         android:layout_marginTop="10dp"
+        android:layout_below="@+id/audioLayout"
         android:visibility="gone"
         android:layout_marginBottom="9dp"
         android:src="@drawable/ic_audio_record" />
@@ -76,7 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/audioLayout"
         android:layout_marginStart="100dp"
         android:layout_marginLeft="100dp"
         android:layout_marginTop="10dp"
