rewards functionality half done

--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
@@ -156,6 +156,10 @@
                     android:layout_marginTop="5dp"
                     android:background="@drawable/mainprofile_thin_border"
                     android:hint="DD/MM/YYYY"
+                    android:paddingStart="15dp"
+                    android:paddingLeft="15dp"
+                    android:editable="false"
+                    android:clickable="false"
                     android:inputType="textNoSuggestions"
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
@@ -190,8 +194,8 @@
                     android:textColor="@color/app_grey"
                     app:fontName="oswald_regular.ttf" />
 
-                <com.mycity4kids.widget.CustomFontEditText
-                    android:id="@+id/editnumberOfKids"
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/spinnernumberOfKids"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/textViewNumberOfKids"
@@ -207,82 +211,38 @@
                 <ImageView
                     android:layout_width="14dp"
                     android:layout_height="14dp"
-                    android:layout_alignTop="@+id/editnumberOfKids"
-                    android:layout_alignRight="@id/editnumberOfKids"
-                    android:layout_marginTop="21dp"
-                    android:layout_marginRight="13dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_alignTop="@+id/spinnernumberOfKids"
+                    android:layout_alignRight="@id/spinnernumberOfKids"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginBottom="8dp"
                     android:src="@drawable/arrowdownnew" />
             </RelativeLayout>
-
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/layoutKidsDOB"
+            
+            <LinearLayout
+                android:id="@+id/linearKidsDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginRight="16dp">
+                android:layout_marginRight="16dp"
+                android:orientation="vertical">
+            </LinearLayout>
 
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/gender"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="KID1 DETAIL"
-                    android:textColor="@color/app_grey"
-                    app:fontName="oswald_regular.ttf"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
-                <android.support.v7.widget.AppCompatSpinner
-                    android:id="@+id/genderSpinner"
-                    android:layout_width="170dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginLeft="0dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginRight="8dp"
-                    android:background="@drawable/mainprofile_thin_border"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/gender" />
-
-                <ImageView
-                    android:layout_width="14dp"
-                    android:layout_height="14dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginRight="12dp"
-                    android:src="@drawable/arrowdownnew"
-                    app:layout_constraintRight_toRightOf="@id/genderSpinner"
-                    app:layout_constraintTop_toTopOf="@+id/genderSpinner" />
-
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/kidsDOBTextView"
-                    android:layout_width="170dp"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="7dp"
-                    android:background="@drawable/mainprofile_thin_border"
-                    android:gravity="center_vertical"
-                    android:hint="DD/MM/YYYY"
-                    android:paddingLeft="10dp"
-                    android:textColor="#000"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/gender" />
-            </android.support.constraint.ConstraintLayout>
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/textAreYouExpecting"
+            <android.support.v7.widget.AppCompatCheckBox
+                android:id="@+id/checkAreYouExpecting"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
-                android:background="@drawable/shape_red_border"
                 android:gravity="center_vertical"
-                android:paddingStart="15dp"
-                android:paddingLeft="15dp"
                 android:paddingEnd="15dp"
                 android:paddingRight="15dp"
+                android:buttonTint="@color/app_red"
                 android:text="ARE YOU EXPECTING?"
-                android:textColor="@color/app_red"
+                android:textColor="@color/app_grey"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/gender" />
 
@@ -292,6 +252,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
+                android:visibility="gone"
                 android:layout_marginRight="16dp">
 
                 <com.mycity4kids.widget.CustomFontTextView
@@ -310,6 +271,8 @@
                     android:layout_marginTop="5dp"
                     android:background="@drawable/mainprofile_thin_border"
                     android:hint="DD/MM/YYYY"
+                    android:editable="false"
+                    android:clickable="false"
                     android:inputType="textNoSuggestions"
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
