--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_social_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_social_info.xml
@@ -20,8 +20,8 @@
             <com.mycity4kids.widget.CustomFontTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginLeft="20dp"
                 android:text="LINK SOCIAL ACCOUNTS"
                 android:textAllCaps="true"
                 android:textColor="@color/app_grey"
@@ -33,29 +33,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp">
+                android:layout_marginTop="10dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp">
 
                 <ImageView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".2"
+                    android:padding="5dp"
                     app:srcCompat="@drawable/ic_instagram" />
 
-                <com.mycity4kids.widget.CustomFontTextView
+                <com.mycity4kids.widget.CustomFontEditText
+                    android:id="@+id/editInstagram"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".6"
-                    android:text="INSTAGRAM"
+                    android:hint="INSTAGRAM"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:textAllCaps="true"
                     android:textColor="@color/app_grey"
                     android:textSize="16sp"
+                    android:background="@android:color/transparent"
                     app:fontName="oswald_regular.ttf" />
 
                 <ImageView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".2"
+                    android:padding="10dp"
                     android:src="@drawable/arrow_right" />
 
             </LinearLayout>
@@ -70,20 +77,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp">
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp">
 
                 <ImageView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".2"
+                    android:padding="5dp"
                     app:srcCompat="@drawable/ic_facebook_svg" />
 
-                <com.mycity4kids.widget.CustomFontTextView
+                <com.mycity4kids.widget.CustomFontEditText
+                    android:id="@+id/editFacebook"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".6"
-                    android:text="FACEBOOK"
+                    android:hint="FACEBOOK"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:background="@android:color/transparent"
                     android:textAllCaps="true"
                     android:textColor="@color/app_grey"
                     android:textSize="16sp"
@@ -93,6 +105,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".2"
+                    android:padding="10dp"
                     android:src="@drawable/arrow_right" />
 
             </LinearLayout>
@@ -114,15 +127,20 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".2"
+                    android:padding="5dp"
                     app:srcCompat="@drawable/ic_twitter" />
 
-                <com.mycity4kids.widget.CustomFontTextView
+                <com.mycity4kids.widget.CustomFontEditText
+                    android:id="@+id/editTwitter"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".6"
-                    android:text="TWITTER"
+                    android:hint="TWITTER"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:textAllCaps="true"
                     android:textColor="@color/app_grey"
+                    android:background="@android:color/transparent"
                     android:textSize="16sp"
                     app:fontName="oswald_regular.ttf" />
 
@@ -130,6 +148,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".2"
+                    android:padding="10dp"
                     android:src="@drawable/arrow_right" />
 
             </LinearLayout>
@@ -151,15 +170,20 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".2"
+                    android:padding="5dp"
                     app:srcCompat="@drawable/ic_youtube" />
 
-                <com.mycity4kids.widget.CustomFontTextView
+                <com.mycity4kids.widget.CustomFontEditText
+                    android:id="@+id/editYoutube"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".6"
-                    android:text="YOUTUBE"
+                    android:hint="YOUTUBE"
                     android:textAllCaps="true"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:textColor="@color/app_grey"
+                    android:background="@android:color/transparent"
                     android:textSize="16sp"
                     app:fontName="oswald_regular.ttf" />
 
@@ -167,6 +191,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".2"
+                    android:padding="10dp"
                     android:src="@drawable/arrow_right" />
             </LinearLayout>
 
@@ -192,14 +217,14 @@
                     android:layout_marginRight="15dp"
                     android:background="@drawable/mainprofile_thin_border"
                     android:hint="@string/add_website"
+                    android:paddingStart="15dp"
+                    android:paddingLeft="15dp"
                     android:inputType="textNoSuggestions"
-                    android:paddingLeft="5dp"
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
                     android:textColor="@color/app_light_black"
                     android:textSize="16dp"
                     app:fontName="oswald_regular.ttf" />
-
             </LinearLayout>
 
             <include
@@ -207,14 +232,63 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp" />
 
-            <com.mycity4kids.widget.CustomFontTextView
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="15dp"
-                android:text="INTERESTS"
-                android:textColor="@color/app_grey"
-                app:fontName="oswald_regular.ttf" />
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="15dp">
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginTop="15dp"
+                    android:text="INTERESTS"
+                    android:textColor="@color/app_grey"
+                    app:fontName="oswald_regular.ttf" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/textEditInterest"
+                    android:layout_width="50sp"
+                    android:layout_height="30sp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="4dp"
+                    android:background="@drawable/shape_red_border"
+                    android:gravity="center"
+                    android:text="EDIT"
+                    android:textColor="@color/app_red"
+                    android:textSize="14sp"
+                    android:visibility="gone"
+                    app:fontName="oswald_regular.ttf" />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/linearInterest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/topicInterestLabel"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="15dp"
+                android:animateLayoutChanges="true"
+                android:orientation="vertical"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="10dp"
+
+                android:visibility="gone">
+
+                <org.apmem.tools.layouts.FlowLayout
+                    android:id="@+id/floatingInterest"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:animateLayoutChanges="true">
+
+                </org.apmem.tools.layouts.FlowLayout>
+            </LinearLayout>
 
             <com.mycity4kids.widget.CustomFontEditText
                 android:id="@+id/editInterest"
@@ -224,9 +298,70 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/mainprofile_thin_border"
+                android:editable="false"
+                android:focusable="false"
                 android:hint="Select"
+                android:paddingStart="15dp"
                 android:inputType="textNoSuggestions"
                 android:paddingLeft="5dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:textColor="@color/app_light_black"
+                android:textSize="16dp"
+                app:fontName="oswald_regular.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="15dp"
+                android:text="PROFESSION"
+                android:textColor="@color/app_grey"
+                app:fontName="oswald_regular.ttf" />
+
+            <android.support.v7.widget.AppCompatSpinner
+                android:id="@+id/spinnerProfession"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/mainprofile_thin_border"
+                android:editable="false"
+                android:focusable="false"
+                android:hint="Select"
+                android:paddingStart="15dp"
+                android:paddingLeft="15dp"
+                android:inputType="textNoSuggestions"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:textColor="@color/app_light_black"
+                android:textSize="16dp"
+                app:fontName="oswald_regular.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="15dp"
+                android:text="INCOME OF HOUSEHOLD"
+                android:textColor="@color/app_grey"
+                app:fontName="oswald_regular.ttf" />
+
+            <android.support.v7.widget.AppCompatSpinner
+                android:id="@+id/spinnerHouseHold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/mainprofile_thin_border"
+                android:editable="false"
+                android:focusable="false"
+                android:hint="Select"
+                android:paddingStart="15dp"
+                android:paddingLeft="15dp"
+                android:inputType="textNoSuggestions"
                 android:paddingTop="15dp"
                 android:paddingBottom="15dp"
                 android:textColor="@color/app_light_black"
@@ -244,7 +379,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="15dp"
                     android:text="DURABLES"
                     android:textColor="@color/app_grey"
@@ -266,15 +400,42 @@
                     app:fontName="oswald_regular.ttf" />
             </RelativeLayout>
 
+            <LinearLayout
+                android:id="@+id/linearDurables"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/topicInterestLabel"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="15dp"
+                android:animateLayoutChanges="true"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="10dp"
+                android:visibility="gone">
+
+                <org.apmem.tools.layouts.FlowLayout
+                    android:id="@+id/floatingDurables"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:animateLayoutChanges="true">
+
+                </org.apmem.tools.layouts.FlowLayout>
+            </LinearLayout>
+
             <com.mycity4kids.widget.CustomFontEditText
-                android:id="@+id/editEmail"
+                android:id="@+id/editDurables"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/mainprofile_thin_border"
+                android:editable="false"
+                android:focusable="false"
                 android:hint="Select"
+                android:paddingStart="15dp"
                 android:inputType="textNoSuggestions"
                 android:paddingLeft="5dp"
                 android:paddingTop="15dp"
@@ -299,7 +460,7 @@
                 android:text="SUBMIT"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
-
         </LinearLayout>
+
     </android.support.v4.widget.NestedScrollView>
 </android.support.constraint.ConstraintLayout>
