--- a/MyCity4Kids/MyCity4Kids/res/layout/recording_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/recording_layout.xml
@@ -61,20 +61,15 @@
 
     </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:id="@+id/imageViewAudio"
-        android:layout_width="41dp"
-        android:layout_height="41dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_gravity="bottom|right"
         android:layout_marginTop="6dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="6dp"
-        android:clickable="true"
-        android:elevation="2dp"
-        android:translationZ="2dp"
-        app:cardCornerRadius="22dp"
-        app:cardUseCompatPadding="false"
-        app:contentPadding="0dp">
+        android:layout_marginBottom="8dp"
+        android:clickable="true">
 
         <ImageView
             android:id="@+id/imageAudio"
@@ -82,23 +77,18 @@
             android:layout_height="match_parent"
             android:src="@drawable/ic_audio_record" />
 
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:id="@+id/imageViewStop"
-        android:layout_width="41dp"
-        android:layout_height="41dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_gravity="bottom|right"
         android:layout_marginTop="6dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="8dp"
         android:clickable="true"
-        android:elevation="2dp"
-        android:translationZ="2dp"
-        android:visibility="gone"
-        app:cardCornerRadius="22dp"
-        app:cardUseCompatPadding="false"
-        app:contentPadding="0dp">
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/imageStop"
@@ -106,7 +96,7 @@
             android:layout_height="match_parent"
             android:src="@drawable/stop_record_ic" />
 
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 
     <android.support.v7.widget.CardView
         android:id="@+id/imageViewSend"
