--- a/MyCity4Kids/MyCity4Kids/res/layout/recording_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/recording_layout.xml
@@ -69,6 +69,8 @@
         android:layout_marginTop="6dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="8dp"
+        android:elevation="2dp"
+        android:translationZ="2dp"
         android:clickable="true">
 
         <ImageView
@@ -87,6 +89,8 @@
         android:layout_marginTop="6dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="8dp"
+        android:elevation="2dp"
+        android:translationZ="2dp"
         android:clickable="true"
         android:visibility="gone">
 
