--- a/MyCity4Kids/MyCity4Kids/res/layout/challenge_recyler_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/challenge_recyler_adapter.xml
@@ -59,6 +59,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="2"
+                    android:visibility="gone"
                     android:paddingBottom="14dp"
                     android:paddingLeft="14dp"
                     android:paddingRight="14dp"
@@ -72,6 +73,7 @@
                     android:id="@+id/TittleText_Line"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
+                    android:visibility="gone"
                     android:layout_below="@+id/storyTitleTextView"
                     android:layout_marginLeft="14dp"
                     android:background="@color/common_underline" />
@@ -154,7 +156,7 @@
                     android:adjustViewBounds="true"
                     android:background="@color/white"
                     android:src="@drawable/groups_generic"
-                    android:visibility="gone" />
+                    android:visibility="visible" />
             </RelativeLayout>
 
             <com.mycity4kids.widget.CustomFontTextView
