--- a/MyCity4Kids/MyCity4Kids/res/layout/video_carousel_container.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/video_carousel_container.xml
@@ -1447,9 +1447,7 @@
                     android:paddingBottom="12dp"
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
-                    android:paddingTop="12dp"
-                    android:src="@drawable/ic_facebook_svg"
-                    android:tint="@color/app_red" />
+                    android:paddingTop="12dp" />
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/whatsappShareImageView"
