--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards.xml
@@ -1,45 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragment.RewardsFragment">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true">
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
 
-        <TextView
+        <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:text="Welcome to the Momspresso Rewards!" />
+            android:text="Welcome to the Momspresso Rewards!"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:fontName="oswald_regular.ttf" />
 
-        <TextView
+        <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/text2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/text1"
             android:layout_centerHorizontal="true"
-            android:gravity="center"
             android:layout_marginTop="20dp"
-            android:text="Leading brands host campai  Leading brands host campai Leading brands host campai Leading brands host campai Leading brands host campai Leading brands host campai Leading brands host campai Leading brands host campai Leading brands host campai" />
+            android:gravity="center"
+            android:text="Leading brands host campaigns in the form of surveys, e-commerce reviews, sponsored blogs and others on a regular basis. We need some information from you to determine your eligibility for these campaigns. Participation in these campaigns involves a monetary benefit and hence Momspresso Rewards."
+            android:textSize="14sp"
+            app:fontName="oswald_regular.ttf" />
 
         <TextView
-            android:id="@+id/text3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/text2"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:layout_marginTop="20dp"
-            android:text="Leading brands host campai  L"/>
+        android:id="@+id/text3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="Leading brands host campaiL"
+        android:visibility="gone" />
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/textStartReward"
@@ -47,16 +51,16 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/text3"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:layout_marginRight="4dp"
-            android:background="@drawable/shape_red_border"
+            android:background="@drawable/shape_red_fill"
             android:gravity="center"
-            android:text="START NOW"
+            android:paddingLeft="40dp"
             android:paddingTop="10dp"
+            android:paddingRight="40dp"
             android:paddingBottom="10dp"
-            android:paddingRight="20dp"
-            android:paddingLeft="20dp"
-            android:textColor="@color/app_red"
+            android:text="START NOW"
+            android:textColor="@color/white"
             android:textSize="14sp"
             app:fontName="oswald_regular.ttf" />
 
