--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_social_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_social_info.xml
@@ -49,8 +49,10 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".6"
-                    android:background="@android:color/transparent"
                     android:hint="INSTAGRAM"
+                    android:focusable="false"
+                    android:editable="false"
+                    android:background="@null"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:textAllCaps="true"
@@ -92,8 +94,10 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".6"
-                    android:background="@android:color/transparent"
                     android:hint="FACEBOOK"
+                    android:focusable="false"
+                    android:editable="false"
+                    android:background="@null"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:textAllCaps="true"
@@ -133,16 +137,29 @@
                 <com.mycity4kids.widget.CustomFontEditText
                     android:id="@+id/editTwitter"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
                     android:layout_weight=".6"
-                    android:background="@android:color/transparent"
-                    android:hint="TWITTER"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
-                    android:textAllCaps="true"
-                    android:textColor="@color/app_grey"
-                    android:textSize="16sp"
+                    android:hint="@string/add_twitter"
+                    android:inputType="textNoSuggestions"
+                    android:textColor="@color/app_light_black"
+                    android:textSize="16dp"
                     app:fontName="oswald_regular.ttf" />
+
+                <!--<com.mycity4kids.widget.CustomFontEditText-->
+                    <!--android:id="@+id/editTwitter"-->
+                    <!--android:layout_width="0dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_weight=".6"-->
+                    <!--android:hint="TWITTER"-->
+                    <!--android:paddingTop="10dp"-->
+                    <!--android:paddingBottom="10dp"-->
+                    <!--android:textAllCaps="true"-->
+                    <!--android:textColor="@color/app_grey"-->
+                    <!--android:textSize="16sp"-->
+                    <!--app:fontName="oswald_regular.ttf" />-->
 
                 <ImageView
                     android:layout_width="0dp"
@@ -176,15 +193,15 @@
                 <com.mycity4kids.widget.CustomFontEditText
                     android:id="@+id/editYoutube"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
                     android:layout_weight=".6"
-                    android:background="@android:color/transparent"
-                    android:hint="YOUTUBE"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
-                    android:textAllCaps="true"
-                    android:textColor="@color/app_grey"
-                    android:textSize="16sp"
+                    android:hint="@string/add_youtube"
+                    android:inputType="textNoSuggestions"
+                    android:textColor="@color/app_light_black"
+                    android:textSize="16dp"
                     app:fontName="oswald_regular.ttf" />
 
                 <ImageView
